# deepface

./: CMakeLists.txt  build.sh  c_cpp_properties.json  morph_filter.cpp  morph_filter.h  plugin.cpp  toolchain.cmake  watch.fish  watch.sh
src/: plugin.cpp
src/landmark_detector/: landmark_detector.cpp  landmark_detector.h
src/morph_filter/: morph_filter.cpp  morph_filter.h
